--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      {{acc}}
+      {{set_value}}
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -9,11 +9,17 @@
 <ion-content [fullscreen]="true">
   <ion-list>
     <ion-item>
-      <ion-input label="текст" [(ngModel)]="acc">
+      <ion-input label="название" [(ngModel)]="input_name">
       </ion-input>
     </ion-item>
+    <ion-item>
+      <ion-input label="автор" [(ngModel)]="input_author">
+      </ion-input>
+    </ion-item>
+    <ion-button (click)="set_my_value()">запомнить</ion-button>
+    {{set_value}}
   </ion-list>
-
+  
   <div id="container">
     <strong>Ready to create an app?</strong>
     <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
